--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,20 @@
 version: '3.8'
 
 services:
-  lama-model:
-    image: montijnb/lama-model:latest
+  app:
+    build: .
     ports:
       - "8000:8000"
     volumes:
       - ./surroundings_data:/app/surroundings_data
       - ./output:/app/output
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+      - ./model/YOLO/weights:/app/model/YOLO/weights
+      - ./model/lama:/app/model/lama
     environment:
       - TORCH_HOME=/app/.torch
       - PYTHONUNBUFFERED=1
     restart: unless-stopped
-
-  yolo-model:
-    image: montijnb/yolo-model:latest
-    volumes:
-      - ./surroundings_data:/app/data
     deploy:
       resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+        limits:
+          memory: 4G
